add: initial docs
